# VCPI-Modeling

./: .gitignore  README.md  pyproject.toml
notebooks/: attention.py  attention_explained.md
src/vcpi_ml/: __init__.py  data.py  device.py  download.py  evaluation.py  expression.py  features.py  sqlshell.py
src/vcpi_ml/experiments/: baseline.py  chemberta_mlp.py  chemberta_ridge.py  mlp.py  ridge.py  smiles_transformer.py
src/vcpi_ml/models/: mean.py  mlp.py  ridge.py  smiles_transformer.py
tests/: test_tokenizer.py
