[project]
name = "vcpi-ml"
version = "0.1.0"
description = "My from-scratch implementation for the VCPI gene-expression prediction contest"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pyarrow",
    "polars",
    "numpy",
    "scikit-learn",
    "rdkit",
    "torch",
    "matplotlib",
    # contest scoring code (gives us score_compounds, load_gene_filter, etc.)
    "vcpi-prediction-contest @ git+https://github.com/virtualcell-vcpi/vcpi-prediction-contest-2026.git",
    # data client (gives us vcpi.load_experiment)
    "vcpi @ git+https://github.com/virtualcell-vcpi/vcpi-client.git",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

# This is what makes `from vcpi_ml import ...` work: it tells Python our
# package lives under src/vcpi_ml. The "src layout" keeps importable code
# separate from notebooks, data, and configs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcpi_ml"]

# Allow `pkg @ git+https://...` dependencies (the two contest packages).
# Hatchling blocks these by default as a safety check; we opt in explicitly.
[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
